Fire effect correction

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="text">
-        <h2>Fire</h2>
+        <h2>File Deleted</h2>
     </div>
     <svg>
         <filter id="fire">
